[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bug-triage-env"
version = "1.0.0"
description = "OpenEnv-compatible bug triage environment for AI agent training"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "openai==1.3.0",
    "pyyaml==6.0.1",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/swasss0/bug-triage-env"
Repository = "https://github.com/Swatii2810/Bug-Triage-Env"
