[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bug-triage-env"
version = "1.0.0"
description = "OpenEnv-compatible bug triage environment for AI agent training"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "requests==2.31.0",
    "openai>=1.30.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
    "pyyaml==6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://huggingface.co/spaces/swasss0/bug-triage-env"
Repository = "https://github.com/Swatii2810/Bug-Triage-Env"
